--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,14 @@
-# EditorConfig is awesome: https://EditorConfig.org
+# EditorConfig - это потрясающе: https://EditorConfig.org
 
-# top-most EditorConfig file
+# Самый верхний файл EditorConfig.
 root = true
 
-# Tab indentation
+# Отступ табуляции.
 [*]
 indent_style = tab
 trim_trailing_whitespace = true
 
-# The indent size used in the `package.json` file cannot be changed
+# Размер отступа, используемый в файле `package.json`, не может быть изменён.
 # https://github.com/npm/npm/pull/3180#issuecomment-16336516
 [{*.yml,*.yaml,package.json}]
 indent_style = space
